Add AbpSwagger module.

--- a/templates/app/aspnet-core/src/MyCompanyName.MyProjectName.HttpApi.HostWithIds/appsettings.json
+++ b/templates/app/aspnet-core/src/MyCompanyName.MyProjectName.HttpApi.HostWithIds/appsettings.json
@@ -7,6 +7,8 @@
     "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=MyProjectName;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44305"
+    "Authority": "https://localhost:44305",
+    "SwaggerClientId": "MyProjectName_App",
+    "SwaggerClientSecret": "1q2w3e*"
   }
 }
