--- a/templates/app/aspnet-core/src/MyCompanyName.MyProjectName.Web/appsettings.json
+++ b/templates/app/aspnet-core/src/MyCompanyName.MyProjectName.Web/appsettings.json
@@ -6,7 +6,9 @@
     "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=MyProjectName;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44301"
+    "Authority": "https://localhost:44301",
+    "SwaggerClientId": "MyProjectName_App",
+    "SwaggerClientSecret": "1q2w3e*"
   },
   "IdentityServer": {
     "Clients": {
