--- a/templates/app/aspnet-core/src/MyCompanyName.MyProjectName.HttpApi.Host/appsettings.json
+++ b/templates/app/aspnet-core/src/MyCompanyName.MyProjectName.HttpApi.Host/appsettings.json
@@ -9,6 +9,8 @@
     "Configuration": "127.0.0.1"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44301"
+    "Authority": "https://localhost:44301",
+    "SwaggerClientId": "MyProjectName_App",
+    "SwaggerClientSecret": "1q2w3e*"
   }
 }
