--- a/templates/app/aspnet-core/src/MyCompanyName.MyProjectName.Web.Host/appsettings.json
+++ b/templates/app/aspnet-core/src/MyCompanyName.MyProjectName.Web.Host/appsettings.json
@@ -13,6 +13,8 @@
   "AuthServer": {
     "Authority": "https://localhost:44301",
     "ClientId": "MyProjectName_Web",
-    "ClientSecret": "1q2w3e*"
+    "ClientSecret": "1q2w3e*",
+    "SwaggerClientId": "MyProjectName_App",
+    "SwaggerClientSecret": "1q2w3e*"
   }
 }
