--- a/modules/docs/src/Volo.Docs.Domain/Volo.Docs.Domain.csproj
+++ b/modules/docs/src/Volo.Docs.Domain/Volo.Docs.Domain.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.2" />
+    <PackageReference Include="Scriban" Version="2.1.1" />
     <PackageReference Include="Octokit" Version="0.36.0" />
     <PackageReference Include="NEST" Version="7.5.1" />
   </ItemGroup>
